[project]
name = "moderation-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["praw<8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "G",
    "PIE",
    "TCH",
    "PLE",
    "PLW",
]
lint.ignore = []
line-length = 100

[project.scripts]
user_monitor = "moderation_automation.user_monitor:main"
